--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "chai": "^3.5.0",
+    "enzyme": "^2.7.1",
     "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2"
   },
   "scripts": {
