--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "nock": "^9.0.3",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-datepicker": "^0.40.0",
+    "react-dom": "^15.4.2",
+    "react-dropdown": "^1.2.0",
+    "react-simple-dropdown": "^1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
